--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@line/bot-sdk": "^7.5.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.3.1"
+    "axios": "^1.6.0",
+    "crypto": "^1.0.1",
+    "express": "^4.18.2"
   }
 }
