--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "line-bot",
-  "version": "1.0.0",
+  "name": "hilo-pro-flex",
+  "version": "2.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "scripts": { "start": "node index.js" },
   "dependencies": {
-    "axios": "^1.6.0",
-    "crypto": "^1.0.1",
+    "@line/bot-sdk": "^9.0.0",
     "express": "^4.18.2"
   }
 }
