--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "hilo-pro-flex",
-  "version": "2.0.0",
+  "version": "1.0.0",
+  "description": "LINE Hilo Bot with Flex Message",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "@line/bot-sdk": "^9.0.0",
     "express": "^4.18.2"
