--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "hilo-pro-flex",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": { "start": "node index.js" },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@line/bot-sdk": "^9.0.0",
+    "@line/bot-sdk": "^7.7.0",
     "express": "^4.18.2"
   }
 }
